[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dawn_giant"
version = "1.0"
description = "Dawn Customizations for GIANT"
dependencies = [
  "giant",
  "numpy",
  "spiceypy",
  "pvl",
  "beautifulsoup4",
  "requests",
]

[tool.setuptools]
py-modules = ["dawn_giant"]
